--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -41,13 +43,14 @@ body{
     background-size: 2000px;
     background-position: top;
     background-color: bisque;
+    font-family: 'Roboto', sans-serif;
 }
 .form-div{
     width: 500px;
     height: 500px;
     background-color: aliceblue;
     position: absolute;
-    top: 20px;
+    top: 80px;
     left: 400px;
     border-radius: 30px;
     box-shadow: 3px 3px 5px #888888;
@@ -93,5 +96,30 @@ img{
    margin-top:50px;
    display: block;
    
+}
+nav{
+    height: 50px;
+    background-color: azure;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    width: 300px;
+    padding: 30px;
+    font-size: 20px;
+    padding-top: 20px;
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: blue;
+}
+a:hover{
+    color: rgb(33, 4, 90);
 }
 
